fixed scrolling to top on all pages but removed overflow auto from body style

--- a/ui2022/src/styles.scss
+++ b/ui2022/src/styles.scss
@@ -21,7 +21,7 @@
 
 html,
 body {
-  overflow: auto;
+  // overflow: auto;
   min-height: 100%;
   height: 100%;
   margin: 0;
